# comment_data

./: .dockerignore  .env.example  .gitignore  CODEX.md  Dockerfile  Makefile  README.md  SEARCH_BACKEND_PLAN.md  docker-compose.prod.yml  docker-compose.yml  main.py  missions.yml  pyproject.toml
comment_data/: __init__.py  api.py  cli.py  collector.py  config.py  conversation.py  db.py  embeddings.py  github_client.py  openai_client.py  reviewers.py  schemas.py  search.py
docs/: openapi.json
nginx/: nginx.conf
